# timemory-tutorials

./: .gitignore  .gitmodules  LICENSE  README.md  modules.md  resources.md  setup.sh  testing.md
apps/: CMakeLists.txt  README.md  build.sh  clean.sh  example.py  setup-env.sh  spack.sh  timemory.cfg
apps/basic/: CMakeLists.txt  basic-region.cpp  basic-trace.cpp  basic.cpp  basic.hpp  builtins.py  example-metadata.py  example.py  marker-argparse-00.py  marker-argparse-01.py  marker-basic.py  marker-caliper.py  marker-data.py  profiler-basic.py  profiler-builtins.py  profiler-context-manager-00.py  profiler-context-manager-01.py  profiler-decorator-00.py  profiler-decorator-01.py  profiler-object.py  trace-basic.py  trace-caliper.py  trace-context-manager.py  trace-decorator.py
apps/custom-dynamic-instr/: CMakeLists.txt  custom_dynamic_instr.cpp
apps/extended/: example-metadata.py  function-wrappers.py  marker-argparse-00.py  marker-argparse-01.py  marker-caliper.py  marker-data.py  marker-extended.py  profiler-caliper.py  profiler-context-manager-00.py  profiler-context-manager-01.py  profiler-context-manager.py  profiler-decorator-00.py  profiler-extended.py  profiler-object.py  trace-caliper.py  trace-context-manager.py  trace-decorator.py
apps/lulesh/: CMakeLists.txt  lulesh.cc
apps/lulesh/cmake/Modules/: Utilities.cmake
apps/matvec/: CMakeLists.txt  README.md
apps/matvec/Kokkos/: CMakeLists.txt  matvec.cpp
apps/matvec/Serial/: CMakeLists.txt  matvec.cpp
apps/matvec/arrayMD/: CMakeLists.txt  arrayMD.h
apps/matvec/common/: CMakeLists.txt  common.cpp  common.hpp
apps/matvec/tooling/: CMakeLists.txt  components.cpp  components.hpp  interface-stubs.cpp  interface.cpp  interface.hpp  wrappers.cpp
apps/python/: CMakeLists.txt  basic.py  intermediate.py  profiler.py  standalone.py
apps/tomopy/: CMakeLists.txt  linux-37.yml  linux-39.yml  phantom-timemory.py  phantom.py  setup.sh  spack.sh
apps/tomopy/misc/: __init__.py
docker/: Dockerfile.cpu  Dockerfile.cuda  Dockerfile.gpu  Dockerfile.hip
extra/command-line-tools/: README.md
extra/command-line-tools/01_timem/: launch.sh
extra/command-line-tools/03_timemory_plotter/: README.md
extra/python-toolkit/: README.md
intro-short/00_timemory-avail/: README.md  launch.sh
intro-short/01_timem/: README  README.md  launch.sh
intro-short/02_python_overview/: README.md
intro-short/02_python_scoped_utilities/: README.md
intro-short/03_python_profiling/: README.md  launch.sh
intro-short/03_python_scoped_utilities/: README.md  launch.sh
intro-short/04_python_components/: README.md
intro-short/04_python_profiling/: README.md  launch.sh
intro-short/05_python_components/: launch.sh
intro-short/05_timemory_run_launch_process/: README.md
intro-short/06_timemory_run_launch_process/: README.md  launch.sh
intro-short/07_timemory_run_attach_process/: README.md  launch.sh
intro-short/07_timemory_run_binary_rewrite/: README.md  launch.sh
intro-short/08_timemory_run_binary_rewrite/: README.md  launch.sh
intro-short/08_timemory_run_binary_rewrite_regex/: README.md
intro-short/09_timemory_run_binary_rewrite_regex/: README.md  launch-mpi.sh  launch.sh
intro-short/09_timemory_run_binary_rewrite_stubs/: launch.sh
intro-short/10_timemory_run_binary_rewrite_mpip/: README.md  launch.sh
intro-short/10_timemory_run_binary_rewrite_stubs/: README.md  launch.sh
intro-short/11_timemory_run_binary_rewrite_mpip/: README.md  launch.sh
intro-short/11_timemory_run_custom_components/: README.md  launch.sh
intro-short/12_timemory_run_custom_components/: README.md  launch.sh
intro-short/13_timemory_run_region_sync/: README.md  launch.sh
modulefiles/: cori-gpu
modulefiles/timemory-tutorials/: cori-gpu
scripts/: clean.sh  setup-env.sh  setup.sh  spack.sh
tutorial-day-1/command-line-tools/: README.md  command_line_tools.md
tutorial-day-1/command-line-tools/01_timem/: README.md  clean.sh
tutorial-day-1/command-line-tools/04_timemory_roofline/: README.md
tutorial-day-1/introduction/: README.md
tutorial-day-1/library-api/: README.md
tutorial-day-1/library-api/00_Overview/: README.md  example.cpp
tutorial-day-1/library-api/00_overview/: CMakeLists.txt  README.md  example.cpp
tutorial-day-1/library-api/01_basic_component_recording/: CMakeLists.txt  README.md  example.cpp  modules.sh
tutorial-day-1/library-api/01_basic_component_recording/solution/: CMakeLists.txt  example.cpp
tutorial-day-1/library-api/01_compiler_instrumentation/: CMakeLists.txt  README.md
tutorial-day-1/library-api/01_compiler_instrumentation/solution/: CMakeLists.txt
tutorial-day-1/library-api/02_marking_regions/: README.md  example.cpp
tutorial-day-1/library-api/02_marking_regions/solution/: CMakeLists.txt  example.cpp
tutorial-day-1/library-api/03_controlling_components/: README.md  example.cpp
tutorial-day-1/library-api/04_compiler_instrumentation/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
tutorial-day-1/library-api/04_compiler_instrumentation/solution/: CMakeLists.txt  example_with_timemory.cpp
tutorial-day-1/library-api/04_custom_components/: CMakeLists.txt  README.md  example.cpp
tutorial-day-1/library-api/05_compiler_instrumentation/: CMakeLists.txt  README.md  example.cpp
tutorial-day-1/library-api/05_compiler_instrumentation/solution/: CMakeLists.txt
tutorial-day-1/library-api/05_test/: example.cpp
tutorial-day-1/python-api-and-tools/: README.md  example-profile-context.py  overview.md
tutorial-day-1/visualizing-and-analyzing-results/: README.md  example.py  test-hatchet.ipynb  timemory-hatchet.ipynb
tutorial-day-2/cpp-toolkit/: README.md
tutorial-day-2/cpp-toolkit/01_lightweight_usage/: CMakeLists.txt  README.md  mm.cpp
tutorial-day-2/cpp-toolkit/01_lightweight_usage/solution/: example.cpp  mm.cpp
tutorial-day-2/python-toolkit/: README.md
tutorial/python-api-and-tools/: README.md  example-profile-context.py  example-profile-decorators.py  overview.md
tutorial/visualizing-and-analyzing-results/: README.md  timemory-hatchet.ipynb
(+72 files in other folders)
